...
      </div>
    );
  };

  return (
    <SendScreen
      testID={nft ? 'nft-send-screen' : 'send-recipient-screen'}
      onBack={onBack}
      title={nft ? t('nft.send.title') : t('token.action.send')}
      subtitle={nft ? nft.name : t('send.screens.recipientSubtitle')}
      action={
        isOrdinal ? undefined : (
          <PrimaryButton
...
