...
              validationState === 'invalid' && styles.inputContainerError,
              validationState === 'warning' && styles.inputContainerWarning,
              validationState === 'valid' && styles.inputContainerSuccess,
            ]}
          >
            <TextInput
              testID="send-recipient-input"
              style={styles.textInput}
              placeholder={addressPlaceholder}
              placeholderTextColor={colors.text.secondary}
              value={address}
              onChangeText={setAddress}
              autoCapitalize="none"
...
