appId: io.salmonwallet.app
---
# From Home, open Settings.
- assertVisible:
    id: 'wallet-header-account-switcher'
- tapOn:
    id: 'wallet-header-settings-button'
- extendedWaitUntil:
    visible:
      id: 'settings-screen'
    timeout: 5000
